tests/paczka1/fuzzy1/48446551.err
Error in line 3: canEH S913 2,1
Error in line 8: 5tJgzDG S34 98,4
Error in line 12: 5tJgzDG S913 25,4
Error in line 28: 5tJgzDG S34 2,0
Error in line 26: gNAJTkX S34 6,5
Error in line 31: VaKVlb S210 0,8
Error in line 6: canEH S34 80,3
